# Aspose.Cells-FOSS-for-Cpp

./: .gitignore  AGENTS.md  README.md
Aspose.Cells.Foss.Cpp/: CMakeLists.txt
Aspose.Cells.Foss.Cpp.Tests/: .gitignore  CMakeLists.txt  README.md
Aspose.Cells.Foss.Cpp.Tests/tests/: WorkbookPortingTests.cpp
Aspose.Cells.Foss.Cpp.Tests/tests/Compatibility/: CompatibilityTests.cpp
Aspose.Cells.Foss.Cpp.Tests/tests/Golden/: CellDataGoldenTests.cpp  OpenXmlFeatureGoldenTests.cpp  WorkbookMetadataGoldenTests.cpp
Aspose.Cells.Foss.Cpp.Tests/tests/Support/: PackageTestSupport.cpp  PackageTestSupport.h  ScenarioFactories.cpp  ScenarioFactories.h  TestSupport.cpp  TestSupport.h
Aspose.Cells.Foss.Cpp.Tests/tests/Unit/: CellDataUnitTests.cpp  WorkbookMetadataUnitTests.cpp  WorksheetFeatureUnitTests.cpp
Aspose.Cells.Foss.Cpp/cmake/: toolchain-detect.cmake
Aspose.Cells.Foss.Cpp/include/aspose/cells_foss/: AutoFilter.h  AutoFilterColorFilter.h  AutoFilterCustomFilter.h  AutoFilterCustomFilterCollection.h  AutoFilterDynamicFilter.h  AutoFilterSortCondition.h  AutoFilterSortConditionCollection.h  AutoFilterSortState.h  AutoFilterSupport.h  AutoFilterTop10.h  Border.h  BorderStyleType.h  Borders.h  CalculationProperties.h  Cell.h  CellArea.h  CellFormatValue.h  CellValue.h  CellValueType.h  Cells.h  CellsException.h  Color.h  Column.h  ColumnCollection.h  ConditionalFormattingCollection.h  CoreDocumentProperties.h  DateTime.h  DefinedName.h  DefinedNameCollection.h  DefinedNameUtility.h  DiagnosticSeverity.h  DisplayFormatSectionInfo.h  DisplayTextDateFormatSupport.h  DisplayTextFormatter.h  DisplayTextFormatterSupport.h  DisplayTextLocaleSupport.h  DocumentProperties.h  ExtendedDocumentProperties.h  FillPattern.h  FillValue.h  (+72 more)
Aspose.Cells.Foss.Cpp/include/aspose/cells_foss/core/: AlignmentValue.h  AutoFilterColorFilterModel.h  AutoFilterCustomFilterModel.h  AutoFilterDynamicFilterModel.h  AutoFilterModel.h  AutoFilterSortConditionModel.h  AutoFilterSortStateModel.h  AutoFilterTop10Model.h  BorderSideValue.h  BorderStyle.h  BordersValue.h  CalculationPropertiesModel.h  CellAddress.h  CellRecord.h  CellValueKind.h  ColorValue.h  ColumnRangeModel.h  ConditionalFormattingModel.h  CoreDocumentPropertiesModel.h  DateSerialConverter.h  DateSystem.h  DefinedNameModel.h  DiagnosticBag.h  DiagnosticEntry.h  DiagnosticSeverity.h  DocumentPropertiesModel.h  ExtendedDocumentPropertiesModel.h  FillPatternKind.h  FilterColumnModel.h  FontValue.h  FormatConditionModel.h  HeaderFooterModel.h  HorizontalAlignment.h  HyperlinkModel.h  MergeRegion.h  NumberFormatValue.h  PageMarginsModel.h  PageOrientation.h  PageSetupModel.h  PrintOptionsModel.h  (+16 more)
Aspose.Cells.Foss.Cpp/include/aspose/cells_foss/internalvalidation/: ValidationMessage.h  ValidationMessageSeverity.h  WorkbookValidator.h
Aspose.Cells.Foss.Cpp/include/aspose/cells_foss/packaging/: IPackageReader.h  IPackageWriter.h  MissingPartException.h  PackageLoadContext.h  PackageModel.h  PackagePartDescriptor.h  PackageStructureException.h  PackagingConventions.h  RelationshipDescriptor.h  RelationshipResolutionException.h
Aspose.Cells.Foss.Cpp/include/aspose/cells_foss/xml/: SharedStringTableXmlMapper.h  StylesheetXmlMapper.h  WorkbookXmlMapper.h  WorksheetXmlMapper.h  XmlParsingException.h
Aspose.Cells.Foss.Cpp/src/: Cell.cpp  DateTime.cpp  Workbook.cpp  Worksheet.cpp
Aspose.Cells.Foss.Cpp/src/aspose/cells_foss/: AutoFilter.cpp  AutoFilterColorFilter.cpp  AutoFilterCustomFilter.cpp  AutoFilterCustomFilterCollection.cpp  AutoFilterDynamicFilter.cpp  AutoFilterSortCondition.cpp  AutoFilterSortConditionCollection.cpp  AutoFilterSortState.cpp  AutoFilterSupport.cpp  AutoFilterTop10.cpp  Border.cpp  BorderStyleType.cpp  Borders.cpp  CalculationProperties.cpp  Cell.cpp  CellArea.cpp  CellFormatValue.cpp  CellValue.cpp  CellValueType.cpp  Cells.cpp  CellsException.cpp  Color.cpp  Column.cpp  ColumnCollection.cpp  ConditionalFormattingCollection.cpp  CoreDocumentProperties.cpp  DefinedName.cpp  DefinedNameCollection.cpp  DefinedNameUtility.cpp  DiagnosticSeverity.cpp  DisplayFormatSectionInfo.cpp  DisplayTextDateFormatSupport.cpp  DisplayTextFormatter.cpp  DisplayTextFormatterSupport.cpp  DisplayTextLocaleSupport.cpp  DocumentProperties.cpp  ExtendedDocumentProperties.cpp  FillPattern.cpp  FillValue.cpp  FilterColumn.cpp  (+70 more)
Aspose.Cells.Foss.Cpp/src/aspose/cells_foss/core/: AlignmentValue.cpp  AutoFilterColorFilterModel.cpp  AutoFilterCustomFilterModel.cpp  AutoFilterDynamicFilterModel.cpp  AutoFilterModel.cpp  AutoFilterSortConditionModel.cpp  AutoFilterSortStateModel.cpp  AutoFilterTop10Model.cpp  BorderSideValue.cpp  BorderStyle.cpp  BordersValue.cpp  CalculationPropertiesModel.cpp  CellAddress.cpp  CellRecord.cpp  CellValueKind.cpp  ColorValue.cpp  ColumnRangeModel.cpp  ConditionalFormattingModel.cpp  CoreDocumentPropertiesModel.cpp  DateSerialConverter.cpp  DateSystem.cpp  DefinedNameModel.cpp  DiagnosticBag.cpp  DiagnosticEntry.cpp  DiagnosticSeverity.cpp  DocumentPropertiesModel.cpp  ExtendedDocumentPropertiesModel.cpp  FillPatternKind.cpp  FilterColumnModel.cpp  FontValue.cpp  FormatConditionModel.cpp  HeaderFooterModel.cpp  HorizontalAlignment.cpp  HyperlinkModel.cpp  MergeRegion.cpp  NumberFormatValue.cpp  PageMarginsModel.cpp  PageOrientation.cpp  PageSetupModel.cpp  PrintOptionsModel.cpp  (+16 more)
Aspose.Cells.Foss.Cpp/src/aspose/cells_foss/internalvalidation/: ValidationMessage.cpp  ValidationMessageSeverity.cpp  WorkbookValidator.cpp
Aspose.Cells.Foss.Cpp/src/aspose/cells_foss/packaging/: IPackageReader.cpp  IPackageWriter.cpp  MissingPartException.cpp  PackageLoadContext.cpp  PackageModel.cpp  PackagePartDescriptor.cpp  PackageStructureException.cpp  PackagingConventions.cpp  RelationshipDescriptor.cpp  RelationshipResolutionException.cpp
Aspose.Cells.Foss.Cpp/src/aspose/cells_foss/xml/: SharedStringTableXmlMapper.cpp  StylesheetXmlMapper.cpp  WorkbookXmlMapper.cpp  WorksheetXmlMapper.cpp  XmlParsingException.cpp
Aspose.Cells.Foss.Cpp/tests/: CMakeLists.txt  cell_value_test.cpp
samples/: CMakeLists.txt
samples/src/: main.cpp
(+1 files in other folders)
